Fix truncating on IE9

--- a/sass/common.scss
+++ b/sass/common.scss
@@ -50,9 +50,8 @@
 
 .truncate {
   width: 100%;
-
   text-overflow: ellipsis;
   white-space: nowrap;
-
   overflow: hidden;
+  word-wrap: normal;
 }
